--- a/index.html
+++ b/index.html
@@ -1,7 +1,4 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 layout: default
 ---
 <h1>Welcome</h1>
@@ -10,12 +7,17 @@ layout: default
 </p>
 
 <h2>Who?</h2>
-<p>We are a team of nine, with vary skill sets and abilities, who have come together to build a fully functioning version of </p>
+<p>We are a team of nine, with vary skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
+<p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
 
 <h2>Why?</h2>
-<p>This is a development blog for our group project for the module CS2010. In our group project, we are re-creating the board game, Othello, as a video game.</p>
+<p>This is a development blog for our group project for the module CS2010. In our group project, we are re-creating the board game, Othello, as a video game.
 
-<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a classic board game for a new generation.</p>
+</p>
+
+<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a classic board game for a new generation.
+
+</p>
 
 <h2>What?</h2>
 Othello is a strategy-based game centered around placing pieces on a board. The aim of the game is to flip the opponents pieces in order to have more pieces on the board.
