--- a/index.html
+++ b/index.html
@@ -2,22 +2,16 @@
 layout: default
 ---
 <h1>Welcome</h1>
-<p>
-  Welcome to our developmental website for Team 4's implementation of Othello.
-</p>
+<p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
 
 <h2>Who?</h2>
 <p>We are a team of nine, with vary skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
 <p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
 
 <h2>Why?</h2>
-<p>This is a development blog for our group project for the module CS2010. In our group project, we are re-creating the board game, Othello, as a video game.
+<p>This is a development blog for our group project for the module CS2010. In our group project, we are re-creating the board game, Othello, as a video game.</p>
 
-</p>
-
-<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a classic board game for a new generation.
-
-</p>
+<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a classic board game for a new generation.</p>
 
 <h2>What?</h2>
-Othello is a strategy-based game centered around placing pieces on a board. The aim of the game is to flip the opponents pieces in order to have more pieces on the board.
+<p>Othello is a strategy-based game centered around placing pieces on a board. The aim of the game is to flip the opponents pieces in order to have more pieces on the board.</p>
