fixed spelling error FIXES #1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
 
 <h2>Who?</h2>
-<p>We are a team of nine, with vary skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
+<p>We are a team of nine, with various skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
 <p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
 
 <h2>Why?</h2>
