--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ layout: default
 <h2>Why?</h2>
 <p>This is a development blog for our group project for the module CS2010. In our group project, we are re-creating the board game, Othello, as a video game.</p>
 
-<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a classic board game for a new generation.</p>
+<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation.</p>
 
 <h2>What?</h2>
 <p>Othello is a strategy-based game centered around placing pieces on a board. The aim of the game is to flip the opponents pieces in order to have more pieces on the board.</p>
