--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 ---
 <h1>Welcome</h1>
 <p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
