--- a/about.html
+++ b/about.html
@@ -4,8 +4,7 @@ title: About
 permalink: /about/
 ---
 
-
-<div id="about">
+<div>
   <p>The team consists of:</p>
   <ul>
     {% for member in site.team %}
