--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 ---
 layout: default
 ---
-<h1>Welcome</h1>
-<p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
+<div class="cd1">
+    <h1>Welcome</h1>
+    <p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
+</div>
 
+<div class="Who">
 <h2>Who?</h2>
 <p>We are a team of nine, with various skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
 <p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
+</div>
 
 <h2>Why?</h2>
 <p>This is a development blog for our group project for the module CS2010. In our group project, we are re-creating the board game, Othello, as a video game.</p>
 
 <p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation.</p>
 
+<div class="What">
 <h2>What?</h2>
-<p>Othello is a strategy-based game centered around placing pieces on a board. The aim of the game is to flip the opponents pieces in order to have more pieces on the board.</p>
+<p>Othello is a strategy-based game centered around placing pieces on a board. The game was built around 1880 under the name “Reversi” by Lewis Waterman, although another Englishman, John W. Mollett, strongly claims it ownership. In fact Mollett had developed in 1870 a game called (The game of) Annexation, similar to the “Reversi”, but using a cross-shaped board. The game is patented in 1888 and in 1893 the Ravensburger acquires the rights and makes it one of the most classic titles in its catalog. In 1970 the Japanese Goro Hasegawa patents it again with the name of Othello, slightly modifying the rules; the game soon became an international best seller, so much so that there are world championships regularly organized since 1977. The classic Reversi is now considered a variant of Othello.
+Othello has inspired several board games, some of these made as computer games or video games; among these we mention Ataxx and Hexxagon, who take the outcome of the capture from Othello: the captured pawns pass to the opponent's lineup. There are also numerous commercial variants, including Rolit and Othello Revolution. Among the "author" variants Desdemona and Macbeth are also to be mentioned.
+
+The game consists of an 8x8 board and 64 two-colored pieces (black with one side, white on the other). The pieces are positioned in the boxes and not in the crossings.
+You play in two. The initial position is that reproduced in figure 1.
+Black begins. Players play in turn.
+Unlike the Reversi, the pieces constitute for the players a common patrimony to which everyone can draw: it can therefore happen that a player plays a number of pieces greater than 32.
+The move consists in placing a piece turned on the side of its color so that one or more opponent's pawns, placed perpendicularly, horizontally, and / or diagonally, remain closed between this pawn placed on the board and another pre-existing same color as the one played.
+</p>
+</div>
