made few changes to post

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ layout: default
 </div>
 
 <h2>Why?</h2>
-<p>This is a development blog for our group project for the module CS2010. In our group project, we are re-creating the board game, Othello, as a video game.</p>
+<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation. Furthermore, we decided to build a game that would be effortless to understand yet entertaining, amusing and enough to play.</p>
 
-<p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation.</p>
+
 
 <div class="What">
 <h2>What?</h2>
@@ -26,6 +26,5 @@ The game consists of an 8x8 board and 64 two-colored pieces (black with one side
 You play in two. The initial position is that reproduced in figure 1.
 Black begins. Players play in turn.
 Unlike the Reversi, the pieces constitute for the players a common patrimony to which everyone can draw: it can therefore happen that a player plays a number of pieces greater than 32.
-The move consists in placing a piece turned on the side of its color so that one or more opponent's pawns, placed perpendicularly, horizontally, and / or diagonally, remain closed between this pawn placed on the board and another pre-existing same color as the one played.
-</p>
+The move consists in placing a piece turned on the side of its color so that one or more opponent's pawns, placed perpendicularly, horizontally, and / or diagonally, remain closed between this pawn placed on the board and another pre-existing same color as the one played.</p>
 </div>
