--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: /about/
 ---
 
-<p>The team consists of:</p>
+<p>The team behind Othello consists of the following people:</p>
 <div class="team">
   <ul class="team">
     {% for member in site.team %}
