partial implementation of Bootstrap

--- a/index.html
+++ b/index.html
@@ -1,24 +1,36 @@
 ---
 layout: page
 ---
-<div class="index-body">
-    <h1>Welcome</h1>
-    <p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
-
-  <h2>Who?</h2>
-  <p>We are a team of nine, with various skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
-  <p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
-
-  <h2>Why?</h2>
-  <p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation. Furthermore, we decided to build a game that would be effortless to understand yet entertaining, amusing and enough to play.</p>
+<div id="introduction" class="jumbotron">
+  <h1>Welcome</h1>
+  <p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
+  <img class="othello-image" src="/OthelloBoard.png">
+</div>
 
 
-  <h2>Downloading Othello</h2>
-  <p>We are now at the stage of development where we've got an MVP to show off to the world. In this version of the game, we currently have a main menu, with a friendly tutorial with a lovely little step-by-step guide, and the game itself.</p>
-  <p>Click <a href="http://www.othellog4.com/downloads/othello.jar">here</a> to download the game for use!</p>
-  <p>It is currenly a Jar file, however you should be able to download it, and play it. You may receive a notification on opening that it is not trusted.</p>
-  <p>In order to open the file, right click it and press open. Here you should receive a dialogue which allows you to overwrite this and open it for use.</p>
+<div class="row">
+  <div class="col-lg-4">
+    <h2>Who?</h2>
+    <p>We are a team of nine, with various skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
+    <p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
+  </div>
 
+  <div class="col-lg-4">
+    <h2>Why?</h2>
+    <p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation. </p> 
+    <p>Furthermore, we decided to build a game that would be effortless to understand yet entertaining, amusing and enough to play.</p>
+  </div>
+
+  <div class="col-lg-4">
+    <h2>How?</h2>
+    <p>We are now at the stage of development where we've got an MVP to show off to the world.</p>
+    <p>Click <a href="http://www.othellog4.com/downloads/othello.jar">here</a> to download the game for use!</p>
+    <p>You may receive a notification on opening that it is not trusted. To overwrite it, right click it and press open, where you should be able to overwrite this and play!</p>
+  </div>
+</div>
+
+
+<div>
   <h2>What?</h2>
   <p>Othello is a strategy-based game centered around placing pieces on a board. The game was built around 1880 under the name “Reversi” by Lewis Waterman, although another Englishman, John W. Mollett, strongly claims it ownership. In fact Mollett had developed in 1870 a game called (The game of) Annexation, similar to the “Reversi”, but using a cross-shaped board. The game is patented in 1888 and in 1893 the Ravensburger acquires the rights and makes it one of the most classic titles in its catalog.</p>
 
@@ -33,3 +45,9 @@ layout: page
 
   <p>The move consists in placing a piece turned on the side of its color so that one or more opponent's pawns, placed perpendicularly, horizontally, and / or diagonally, remain closed between this pawn placed on the board and another pre-existing same color as the one played.</p>
 </div>
+
+
+
+
+
+
