--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@ layout: page
 <div id="introduction" class="jumbotron">
   <h1>Welcome</h1>
   <p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
-  <img class="othello-image" src="/OthelloBoard.png">
 </div>
 
 
 <div class="row">
-  <div class="col-lg-4">
+  <div class="col-lg-4 info-section">
     <h2>Who?</h2>
     <p>We are a team of nine, with various skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
     <p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
   </div>
 
-  <div class="col-lg-4">
+  <div class="col-lg-4 info-section">
     <h2>Why?</h2>
     <p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation. </p> 
     <p>Furthermore, we decided to build a game that would be effortless to understand yet entertaining, amusing and enough to play.</p>
@@ -33,8 +32,12 @@ layout: page
 <div class="row">
 
   <div class="col-lg-12">
-      <h2>What?</h2>
-      <p>Othello is a strategy-based game centered around placing pieces on a board. The game was built around 1880 under the name “Reversi” by Lewis Waterman, although another Englishman, John W. Mollett, strongly claims it ownership. In fact Mollett had developed in 1870 a game called (The game of) Annexation, similar to the “Reversi”, but using a cross-shaped board. The game is patented in 1888 and in 1893 the Ravensburger acquires the rights and makes it one of the most classic titles in its catalog.</p>
+      <h2>What</h2>
+      <p>Othello is a strategy-based game centered around placing pieces on a board. The game was built around 1880 under the name “Reversi” by Lewis Waterman, although another Englishman, John W. Mollett, strongly claims it ownership.</p>
+
+      <img class="othello-image" src="/OthelloBoard.png">
+
+      <p>Mollett had developed in 1870 a game called (The game of) Annexation, similar to the “Reversi”, but using a cross-shaped board. The game is patented in 1888 and in 1893 the Ravensburger acquires the rights and makes it one of the most classic titles in its catalog.</p>
 
       <p>In 1970 the Japanese Goro Hasegawa patents it again with the name of Othello, slightly modifying the rules; the game soon became an international best seller, so much so that there are world championships regularly organized since 1977. The classic Reversi is now considered a variant of Othello.</p>
 
@@ -46,7 +49,6 @@ layout: page
       <p>Unlike the Reversi, the pieces constitute for the players a common patrimony to which everyone can draw: it can therefore happen that a player plays a number of pieces greater than 32.</p>
 
       <p>The move consists in placing a piece turned on the side of its color so that one or more opponent's pawns, placed perpendicularly, horizontally, and / or diagonally, remain closed between this pawn placed on the board and another pre-existing same color as the one played.</p>
-
   </div>
 </div>
 
