--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ layout: page
 <div id="introduction" class="jumbotron">
   <h1>Welcome</h1>
   <p>Welcome to our developmental website for Team 4's implementation of Othello.</p>
+  <a class="btn btn-primary btn-lg btn-block" href="http://www.othellog4.com/downloads/othello.jar">Download Othello now</a>
+  <p>Head over to <a href="downloads/">Downloads</a> if you've got any queries or issues.</p>
 </div>
 
 
@@ -34,9 +36,7 @@ layout: page
   <div class="col-lg-12">
       <h2>What</h2>
       <p>Othello is a strategy-based game centered around placing pieces on a board. The game was built around 1880 under the name “Reversi” by Lewis Waterman, although another Englishman, John W. Mollett, strongly claims it ownership.</p>
-
-      <img class="othello-image" src="/OthelloBoard.png">
-
+      
       <p>Mollett had developed in 1870 a game called (The game of) Annexation, similar to the “Reversi”, but using a cross-shaped board. The game is patented in 1888 and in 1893 the Ravensburger acquires the rights and makes it one of the most classic titles in its catalog.</p>
 
       <p>In 1970 the Japanese Goro Hasegawa patents it again with the name of Othello, slightly modifying the rules; the game soon became an international best seller, so much so that there are world championships regularly organized since 1977. The classic Reversi is now considered a variant of Othello.</p>
