--- a/download.html
+++ b/download.html
@@ -4,14 +4,24 @@ title: Downloads
 permalink: /downloads/
 ---
 <div class="row">
-  <div class="col-sm-12 info-section">
-    Current Version: <a href="downloads/">Version 1.0</a> 
-    <p>Features include:</p>
-    <ul>
-      <li></li>
-    </ul>
-  </div>
-
+	<div class="col-sm-6 info-section">
+    	Current Version: <a href="http://www.othellog4.com/downloads/othello.jar">Version 1.0</a> 
+    	<p>Features include:</p>
+    	<ul>
+			<li>Interative tutorial, featuring O-Fellow!</li>
+      		<li>Backing Track</li>
+      		<li>Ability to play a single game of Othello</li>
+    	</ul>
+  	</div>
+	<div class="col-sm-6 info-section">
+	Future Version: Version 2.0
+	<p>Future Features:</p>
+	<ul>
+		<li>Play against an AI!</li>
+		<li>Scoreboard Listing</li>
+		<li>Multi-network play</li>
+	</ul>
+	</div>
 </div>
 
 
