--- a/index.html
+++ b/index.html
@@ -10,23 +10,30 @@ layout: page
 
 
 <div class="row">
-  <div class="col-lg-4 info-section">
+  <div class="col-lg-3 info-section">
     <h2>Who?</h2>
     <p>We are a team of nine, with various skill sets and abilities, who have come together to build a fully functioning video game based on Othello, a popular board game.</p>
     <p>If you'd like to find out more about the team, head over to our <a href="about/">About</a> page.</p>
   </div>
 
-  <div class="col-lg-4 info-section">
+  <div class="col-lg-3 info-section">
     <h2>Why?</h2>
-    <p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation. </p> 
+    <p>Our intended purpose for this project is to create a 21st century version of Othello in order to revitalise a board game for a new generation. </p>
     <p>Furthermore, we decided to build a game that would be effortless to understand yet entertaining, amusing and enough to play.</p>
   </div>
 
-  <div class="col-lg-4">
+  <div class="col-lg-3 info-section">
     <h2>How?</h2>
     <p>We are now at the stage of development where we've got an MVP to show off to the world.</p>
     <p>Click <a href="http://www.othellog4.com/downloads/othello.jar">here</a> to download the game for use!</p>
     <p>You may receive a notification on opening that it is not trusted. To overwrite it, right click it and press open, where you should be able to overwrite this and play!</p>
+  </div>
+
+  <div class="col-lg-3">
+    <h2>Source Code!</h2>
+    <p>If you'd like to see the nitty-gritty source code of our game, you can head over to <a href="https://github.com/SaileshPatel/othello-game">GitHub repository</a>.</p>
+    <p>Our production branch is where you'll find our latest code, while our master branch is where you'll find our most stable code.</p>
+    <p></p>
   </div>
 </div>
 
@@ -36,7 +43,7 @@ layout: page
   <div class="col-lg-12">
       <h2>What</h2>
       <p>Othello is a strategy-based game centered around placing pieces on a board. The game was built around 1880 under the name “Reversi” by Lewis Waterman, although another Englishman, John W. Mollett, strongly claims it ownership.</p>
-      
+
       <p>Mollett had developed in 1870 a game called (The game of) Annexation, similar to the “Reversi”, but using a cross-shaped board. The game is patented in 1888 and in 1893 the Ravensburger acquires the rights and makes it one of the most classic titles in its catalog.</p>
 
       <p>In 1970 the Japanese Goro Hasegawa patents it again with the name of Othello, slightly modifying the rules; the game soon became an international best seller, so much so that there are world championships regularly organized since 1977. The classic Reversi is now considered a variant of Othello.</p>
@@ -51,9 +58,3 @@ layout: page
       <p>The move consists in placing a piece turned on the side of its color so that one or more opponent's pawns, placed perpendicularly, horizontally, and / or diagonally, remain closed between this pawn placed on the board and another pre-existing same color as the one played.</p>
   </div>
 </div>
-
-
-
-
-
-
