--- a/download.html
+++ b/download.html
@@ -5,27 +5,21 @@ permalink: /downloads/
 ---
 <div class="row">
 	<div class="col-sm-6 info-section">
-    	Current Version: <a href="http://www.othellog4.com/downloads/othello.jar">Version 1.0</a> 
-    	<p>Features include:</p>
-    	<ul>
-			<li>Interative tutorial, featuring O-Fellow!</li>
-      		<li>Backing Track</li>
-      		<li>Ability to play a single game of Othello</li>
-    	</ul>
-  	</div>
-	<div class="col-sm-6 info-section">
-	Future Version: Version 2.0
-	<p>Future Features:</p>
+		Current Version: <a href="http://www.othellog4.com/downloads/othello.jar">Version 2.0</a>
+	<p>Included Features:</p>
 	<ul>
-		<li>Play against an AI!</li>
-		<li>Scoreboard Listing</li>
-		<li>Multi-network play</li>
+		<li>Player vs AI</li>
+		<li>Player vs Player (Online Game)</li>
+		<li>Helpful Tutorial feating O-Fellow</li>
 	</ul>
 	</div>
+	<div class="col-sm-6 info-section">
+		Issues:
+		<p>No software is fool-proof, and we're aware that can we can do a lot more
+		to improve Othello. </p>
+		<p>We'd love your help, so if you've got any suggestions, comments or some
+		criticisms, head over to
+		<a href="https://github.com/SaileshPatel/othello-game/issues">Issues</a>
+		page where we'll try and help you out.</p>
+	</div>
 </div>
-
-
-
-
-
-
