--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: page
   <div class="col-lg-3 info-section">
     <h2>How?</h2>
     <p>We are now at the stage of development where we've got an MVP to show off to the world.</p>
-    <p>Click <a href="http://www.othellog4.com/downloads/othello.jar">here</a> to download the game for use!</p>
+    <p>Click <a class="jumbotron-link" href="http://www.othellog4.com/downloads/othello.jar">here</a> to download the game for use!</p>
     <p>You may receive a notification on opening that it is not trusted. To overwrite it, right click it and press open, where you should be able to overwrite this and play!</p>
   </div>
 
